# mp3-to-osu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
profiles/: -Faded-.json  -Hanayuki-.json  ALL.json  Aerous.json  Aia.json  Airiesu.json  AirinCat.json  AllStar12.json  Amandia.json  Ashasaki.json  Asserin.json  Astar.json  Astarte.json  AtHeoN.json  Atrue.json  Atsuro.json  Bakari.json  Bearizm.json  Beige.json  Bibbity Bill.json  Bonsai.json  ByBy13.json  C00L.json  Cheesecake.json  CircleNoob101.json  Come_Back_Home.json  Crissa.json  Cyllinus.json  DakeDekaane.json  Damnae.json  DeRandom Otaku.json  Delis.json  Doormat.json  Dyl-Byl.json  EijiKuinbii.json  Ephemeral.json  Euny.json  FCL.json  Fast.json  Fatfan Kolek.json  (+152 more)
scripts/: fetch_hitsounds.py
src/mp3_to_osu/: __init__.py  audio.py  cli.py  fetch.py  lyrics.py  osu_format.py  package.py  patterns.py  pipeline.py  recognize.py  replay.py  rhythm.py  structure.py  style.py
src/mp3_to_osu/learn/: __init__.py  cli.py  corpus.py  features.py  fetch_osu.py  parse.py  profile.py
src/mp3_to_osu/web/: __init__.py  api.py  server.py
src/mp3_to_osu/web/static/: app.js  index.html  style.css
tests/: make_click_and_run.py  test_parser.py
